--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <h2>Famous legumes</h2>
 
-    <img class="inset-left" src="images/peanuts.jpg" alt="">
+    <img class="inset-left-2" src="images/peanuts.jpg" alt="">
     Peanuts — first cultivated in the valleys of Paraguay
-    <img class="inset-left" src="images/beans.jpg" alt="">
+    <img class="inset-left-2" src="images/beans.jpg" alt="">
     Beans — a summer crop that needs warm temperatures
-    <img class="inset-left" src="images/lentils.jpg" alt="">
+    <img class="inset-left-2" src="images/lentils.jpg" alt="">
     Lentils — an edible pulse from a bushy annual plant
 
     © Grains.
