--- a/index.html
+++ b/index.html
@@ -13,35 +13,38 @@
     <h1>Grains</h1>
       <nav>
         <ol>
-          <li><a href="">Intro</a></li>
-          <li><a href="">Cereals</a></li>
-          <li><a href="">Legumes</a></li>
+          <li><a href="#Intro">Intro</a></li>
+          <li><a href="#Cereals">Cereals</a></li>
+          <li><a href="#Legumes">Legumes</a></li>
         </ol>
       </nav>
   </header>
-    <img class="inset-left" src="images/grains.jpg" alt="">
-    <p>Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.</p>
 
-    <img class="inset-right" src="images/cereals.jpg" alt="">
-    <img src="images/quinoa.jpg" alt="">
-    <p class="p2">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
+    <main>
+      <img class="inset-left" src="images/grains.jpg" alt="">
+      <p>Grains are small, hard, dry seeds, with or without attached hulls or fruit layers, harvested for human or animal consumption. The two main types of commercial grain crops are cereals such as wheat and rye, and legumes such as beans and soybeans.</p>
 
-    <h2>Famous cereals</h2>
+      <img class="inset-right" src="images/cereals.jpg" alt="">
+      <img class="inset-right" src="images/quinoa.jpg" alt="">
+      <p class="p2">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
 
-    <img src="images/corn.jpg" alt="">
-    Corn
-    <img class="inset-left" src="images/rice.jpg" alt="">
-    Rice
-    <img class="inset-right" src="images/oats.jpg" alt="">
-    Oats
+      <h2>Famous cereals</h2>
 
-    <h2>Famous legumes</h2>
+      <img src="images/corn.jpg" alt="">
+      Corn
+      <img class="inset-left" src="images/rice.jpg" alt="">
+      Rice
+      <img class="inset-right" src="images/oats.jpg" alt="">
+      Oats
 
-    <img class="inset-left-2" src="images/peanuts.jpg" alt="">
-    Peanuts — first cultivated in the valleys of Paraguay
-    <img class="inset-left-2" src="images/beans.jpg" alt="">
-    Beans — a summer crop that needs warm temperatures
-    <img class="inset-left-2" src="images/lentils.jpg" alt="">
-    Lentils — an edible pulse from a bushy annual plant
-
-    © Grains.
+      <h2>Famous legumes</h2>
+      <ul>
+      <img class="inset-left-2" src="images/peanuts.jpg" alt="">
+        <li class="bottom">Peanuts — first cultivated in the valleys of Paraguay</li>
+      <img class="inset-left-2" src="images/beans.jpg" alt="">
+        <li class="bottom">Beans — a summer crop that needs warm temperatures</li>
+      <img class="inset-left-2" src="images/lentils.jpg" alt="">
+        <li class="bottom">Lentils — an edible pulse from a bushy annual plant</li>
+      </ul>
+      © Grains.
+    </main>
