Fixed Images and added Footer tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
   <header>
-    <h1>Grains</h1>
+    <img class="grain-left" src="images/grain-left.svg"><h1>Grains</h1><img class="grain-right" src="images/grain-right.svg">
       <nav>
         <ol>
           <li><a href="#Intro">Intro</a></li>
@@ -28,14 +28,18 @@
       <img class="inset-right" src="images/quinoa.jpg" alt="">
       <p class="p2">After being harvested, dry grains are more durable than other staple foods such as starchy fruits such as plantains and breadfruit and tubers such as sweet potatoes and cassava. This durability has made grains well suited to industrial agriculture, since they can be mechanically harvested, transported by rail or ship, stored for long periods in silos, and milled for flour or pressed for oil.</p>
 
+    <div>
+
       <h2>Famous cereals</h2>
 
-      <img src="images/corn.jpg" alt="">
-      Corn
-      <img class="inset-left" src="images/rice.jpg" alt="">
-      Rice
-      <img class="inset-right" src="images/oats.jpg" alt="">
-      Oats
+      <img class="corn" src="images/corn.jpg" alt="">
+      <p class="corn-info">Corn</p>
+      <img class="inset-rice" src="images/rice.jpg" alt="">
+      <img class="oats-info" src="images/oats.jpg" alt="">
+      <p class="rice-info">Rice</p>
+      <p class="oats">Oats</p>
+
+    </div>
 
       <h2>Famous legumes</h2>
       <ul>
@@ -46,5 +50,6 @@
       <img class="inset-left-2" src="images/lentils.jpg" alt="">
         <li class="bottom">Lentils — an edible pulse from a bushy annual plant</li>
       </ul>
-      © Grains.
+
+      <footer>© Grains.</footer>
     </main>
