Fixed Left/Right Grain Graphic HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
   <header>
-    <img class="grain-left" src="images/grain-left.svg"><h1>Grains</h1><img class="grain-right" src="images/grain-right.svg">
+    <img class="grain-left" src="images/grain-left.svg" alt="."><img class="grain-right" src="images/grain-right.svg" alt="."><h1>Grains</h1>
       <nav>
         <ol>
           <li><a href="#Intro">Intro</a></li>
@@ -42,12 +42,12 @@
     </div>
 
       <h2>Famous legumes</h2>
-      <ul>
       <img class="inset-left-2" src="images/peanuts.jpg" alt="">
-        <li class="bottom">Peanuts — first cultivated in the valleys of Paraguay</li>
       <img class="inset-left-2" src="images/beans.jpg" alt="">
-        <li class="bottom">Beans — a summer crop that needs warm temperatures</li>
       <img class="inset-left-2" src="images/lentils.jpg" alt="">
+      <ul>
+        <li class="bottom">Peanuts — first cultivated in the valleys of Paraguay</li>
+        <li class="bottom">Beans — a summer crop that needs warm temperatures</li>
         <li class="bottom">Lentils — an edible pulse from a bushy annual plant</li>
       </ul>
 
